# botw-bot

./: .gitignore  .pre-commit-config.yaml  BiasOfTheWeek.py  DataStore.py  Dockerfile  README.md  Scheduler.py  Utilities.py  botw-bot.py  botwbot.py  conf.ini.sample  config.yml.sample  const.py  db.py  docker-compose.yml  firebase.py  help_command.py  launcher.py  log.py  menu.py  menus.py  models.py  pyproject.toml  requirements.txt  util.py
.github/workflows/: dockerimage.yml
alembic/: env.py
alembic/versions/: 099219c215b9_add_guildsettings_whitelisted.py  2f49c0729ee4_add_blocked_users_model.py  33ab173d34a2_add_botwsettings_renomination_cooldown.py  42180b951b16_add_botwsettings_announcement_day_.py  56aa9ca0c127_make_commandlog__guild_nullable.py  70798f0b4c85_add_banned_words_model.py  95cf9ae2faf5_custom_roles_models.py  a632afbaf331_add_rolesettings.py  b6fdae5a4a5a_add_guildcogs_model.py  ccf4bb99a5fa_add_custom_roles_announcement_msg.py
cogs/: BiasOfTheWeek.py  CardGameUtils.py  CustomRoles.py  EmojiUtils.py  Fun.py  Gfycat.py  Greeters.py  Instagram.py  Live.py  Logging.py  Main.py  Mirroring.py  Profiles.py  Reminders.py  Roles.py  Scheduler.py  Settings.py  Tags.py  Trolling.py  Twitter.py  UrlShortener.py  Utilities.py  Weather.py  WolframAlpha.py  __init__.py
migrations/: schema_001.sql  schema_002.sql  schema_100.sql
models/: BotwState.py  BotwWinner.py  ChannelMirror.py  GuildSettings.py  Idol.py  Job.py  Nomination.py  Profile.py  Reminder.py  Tag.py  __init__.py  banned_words.py  base.py  blocked_users.py  botw.py  channel_mirror.py  custom_role.py  greeter.py  guild_settings.py  log.py  profile.py  reminder.py  role.py  tag.py  twitter.py
util/: __init__.py  channel_locker.py  cogs.py  converters.py  decorators.py  dnf_parser.py  fuzzy.py  retrying_context_manager.py  trie.py  util.py
views/: __init__.py  base_view.py  role_creator.py
