[project]
name = "botw-bot"
version = "0.1.0"
description = ""
authors = ["Noah <noah@dreckbu.de>"]
requires_python = ">=3.9,<3.13"
dependencies = [
    "alembic>=1.6.5",
    "asyncpg>=0.29.0",
    "click>=8.0.1",
    "dateparser>=1.0.0",
    "jishaku>=2.5.1",
    "pendulum>=2.1.2",
    "Pillow>=9.0.0",
    "psycopg2-binary>=2.9.1",
    "PyYAML>=6.0.0",
    "seaborn>=0.11.1",
    "gfypy>=1.2.4",
    "peony-twitter==2.1.2",
    "SQLAlchemy>=1.4.22,<2",
    "pandas>=1.3.1",
    "scipy>=1.7.3",
    "discord-py>=2.3.2",
    "cachetools>=5.3.0",
    "aioscheduler @ git+https://github.com/noahkw/aioscheduler",
    "discord-ext-menus @ git+https://github.com/Rapptz/discord-ext-menus",
]

[tool.uv.sources]
aioscheduler = { git = "https://github.com/noahkw/aioscheduler" }
discord-ext-menus = { git = "https://github.com/Rapptz/discord-ext-menus" }
